# audd-cpp

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: custom_catalog_add.cpp  recognize_enterprise.cpp  recognize_file.cpp  recognize_url.cpp  scan_and_rename.cpp  stream_to_csv.cpp  streams_callback_handler.cpp  streams_longpoll.cpp  streams_setup.cpp
include/audd/: advanced.hpp  audd.hpp  callback.hpp  client.hpp  custom_catalog.hpp  error.hpp  longpoll.hpp  recognition.hpp  source.hpp  streams.hpp  version.hpp
src/: advanced.cpp  callback.cpp  client.cpp  custom_catalog.cpp  http_client.cpp  json_parse.cpp  longpoll.cpp  md5.cpp  streams.cpp
src/internal/: client_internal.hpp  http_client.hpp  json_parse.hpp  md5.hpp  retry.hpp
tests/: main.cpp  test_callback_parse.cpp  test_enterprise_parse.cpp  test_error_mapping.cpp  test_longpoll_category.cpp  test_recognition_parse.cpp  test_retry_policy.cpp  test_variant_optional.cpp
